refactor: code style
Signed-off-by: xstefank <xstefank122@gmail.com>